--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,23 @@
 {
+  "id": "/chat-pwa/",
   "name": "PWA Chat",
   "short_name": "Chat",
-  "start_url": ".",
+  "description": "Einfache Progressive Web App Demo zum Testen von Chat-Funktionen.",
+  "start_url": "./?source=pwa",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0f0f10",
   "theme_color": "#111111",
   "icons": [
-    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
